--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 -->
 <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
 <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
-<script>THREEx.ArToolkitContext.baseURL = 'https://rawgit.com/jeromeetienne/ar.js/master/three.js/'</script>
+<script>THREEx.ArToolkitContext.baseURL = "https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"</script>
 
 <body style='margin : 0px; overflow: hidden;'>
     <!-- 
